docs/0.19/_sources/api/gammapy.irf.RadMax2D.rst.txt
RadMax2D
========

.. currentmodule:: gammapy.irf

.. autoclass:: RadMax2D
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~RadMax2D.axes
      ~RadMax2D.data
      ~RadMax2D.default_interp_kwargs
      ~RadMax2D.is_offset_dependent
      ~RadMax2D.is_pointlike
      ~RadMax2D.quantity
      ~RadMax2D.required_axes
      ~RadMax2D.tag
      ~RadMax2D.unit

   .. rubric:: Methods Summary

   .. autosummary::

      ~RadMax2D.cumsum
      ~RadMax2D.evaluate
      ~RadMax2D.from_hdulist
      ~RadMax2D.from_table
      ~RadMax2D.integral
      ~RadMax2D.integrate_log_log
      ~RadMax2D.interp_missing_data
      ~RadMax2D.normalize
      ~RadMax2D.pad
      ~RadMax2D.read
      ~RadMax2D.to_hdulist
      ~RadMax2D.to_table
      ~RadMax2D.to_table_hdu
      ~RadMax2D.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: axes
   .. autoattribute:: data
   .. autoattribute:: default_interp_kwargs
   .. autoattribute:: is_offset_dependent
   .. autoattribute:: is_pointlike
   .. autoattribute:: quantity
   .. autoattribute:: required_axes
   .. autoattribute:: tag
   .. autoattribute:: unit

   .. rubric:: Methods Documentation

   .. automethod:: cumsum
   .. automethod:: evaluate
   .. automethod:: from_hdulist
   .. automethod:: from_table
   .. automethod:: integral
   .. automethod:: integrate_log_log
   .. automethod:: interp_missing_data
   .. automethod:: normalize
   .. automethod:: pad
   .. automethod:: read
   .. automethod:: to_hdulist
   .. automethod:: to_table
   .. automethod:: to_table_hdu
   .. automethod:: write
